--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 #
 version: 2
 jobs:
-  build:
+  test:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
@@ -53,3 +53,26 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+  build:
+     environment:
+          IMAGE_NAME: azab/building-on-ci
+    docker:
+     
+      - image: circleci/python:3.6.1
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+        name: build Docker image
+        command: docker build -t $IMAGE_NAME:latest .
+workflows:
+  version: 2
+  build-master:
+    jobs:
+      - test
+      -build:
+        requires:
+          - test
