--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,13 @@ workflows:
   version: 2
   build-master:
     jobs:
-      - test
-      - build
-       
+          - test:
+              filters:
+                branches:
+                  only: master
+          - build:
+              requires:
+                - test
+              filters:
+                branches:
+                  only: master   
