--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,11 @@ jobs:
       - run:
           name: build Docker image
           command: docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: publish to  Docker Hub
+          command: |
+                echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+                docker push $IMAGE_NAME:latest
 workflows:
   version: 2
   build-master:
