--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,10 +54,11 @@ jobs:
           name: build Docker image
           command: docker build -t $IMAGE_NAME:latest .
       - run:
-          name: publish to  Docker Hub
-          command: |
-                echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-                docker push $IMAGE_NAME:latest
+          name: login to  Docker Hub
+          command: docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASS"
+      - run:
+          name: publish to DOcker Hub
+          command: docker push $IMAGE_NAME:latest
 workflows:
   version: 2
   build-master:
