Added the options to Add plants

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".PlantProfileActivity" />
+        <activity android:name=".AddPlantActivity" />
     </application>
 
 </manifest>
