--- a/cfc-irrigation-system-service.yaml
+++ b/cfc-irrigation-system-service.yaml
@@ -15,5 +15,6 @@ spec:
     targetPort: 8000
   selector:
     io.kompose.service: cfc-irrigation-system
+  type: NodePort
 status:
   loadBalancer: {}
